Comecei a pensar em como arrumar a função "muda_regiao"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,13 @@
         "xlocmon": "cpp",
         "xloctime": "cpp",
         "deque": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "*.tcc": "cpp",
+        "condition_variable": "cpp",
+        "cstdarg": "cpp",
+        "cwctype": "cpp",
+        "unordered_map": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp"
     }
 }
